--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.48"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
