improve performance and change loading indicator and other fixes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,9 @@ android {
     defaultConfig {
         applicationId 'com.dart.campushelper'
         minSdk 26
-        targetSdk 33
-        versionCode 4
-        versionName "1.0.3"
+        targetSdk 34
+        versionCode 5
+        versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -24,6 +24,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -151,9 +152,9 @@ dependencies {
     // For building appwidgets with Glance
     implementation 'androidx.glance:glance-appwidget:1.0.0'
 
-    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
