--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId 'com.dart.campushelper'
         minSdk 26
         targetSdk 34
-        versionCode 11
-        versionName "1.0.10"
+        versionCode 12
+        versionName "1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -51,6 +51,14 @@ android {
 }
 
 dependencies {
+
+    // Vico
+    // For Jetpack Compose.
+    implementation("com.patrykandpatrick.vico:compose:1.13.0")
+    // For `compose`. Creates a `ChartStyle` based on an M3 Material Theme.
+    implementation("com.patrykandpatrick.vico:compose-m3:1.13.0")
+    // Houses the core logic for charts and other elements. Included in all other modules.
+    implementation("com.patrykandpatrick.vico:core:1.13.0")
 
     //Hilt
     def hilt_version = '2.48'
