--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,19 +6,22 @@ plugins {
 }
 
 android {
+
     compileSdk 34
 
     defaultConfig {
         applicationId 'com.dart.campushelper'
         minSdk 26
         targetSdk 34
-        versionCode 14
-        versionName "1.1.2"
+        versionCode 15
+        versionName "1.1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
+
+        resourceConfigurations += ["en", "ja", "ko", "zh-rCN", "zh-rTW"]
     }
 
     buildTypes {
@@ -26,6 +29,19 @@ android {
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            bundle {
+                // Set this to false to make the app store all language resource.
+                language {
+                    enableSplit = false
+                }
+                density {
+                    enableSplit = true
+                }
+                abi {
+                    enableSplit = true
+                }
+            }
         }
     }
     compileOptions {
@@ -53,12 +69,13 @@ android {
 dependencies {
 
     // Vico
+    def vico_version = '1.13.0'
     // For Jetpack Compose.
-    implementation("com.patrykandpatrick.vico:compose:1.13.0")
+    implementation("com.patrykandpatrick.vico:compose:$vico_version")
     // For `compose`. Creates a `ChartStyle` based on an M3 Material Theme.
-    implementation("com.patrykandpatrick.vico:compose-m3:1.13.0")
+    implementation("com.patrykandpatrick.vico:compose-m3:$vico_version")
     // Houses the core logic for charts and other elements. Included in all other modules.
-    implementation("com.patrykandpatrick.vico:core:1.13.0")
+    implementation("com.patrykandpatrick.vico:core:$vico_version")
 
     //Hilt
     def hilt_version = '2.48'
@@ -89,12 +106,10 @@ dependencies {
     implementation("androidx.datastore:datastore-preferences-core:1.0.0")
 
     def work_version = '2.8.1'
-
     // Kotlin + coroutines
     implementation("androidx.work:work-runtime-ktx:$work_version")
 
     def lifecycle_version = '2.7.0-alpha02'
-
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // ViewModel utilities for Compose
@@ -103,12 +118,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Lifecycles only (without ViewModel or LiveData)
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-
     // Saved state module for ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-
     // Annotation processor
-    //noinspection LifecycleAnnotationProcessorWithJava8
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     implementation 'org.jsoup:jsoup:1.16.1'
@@ -116,26 +128,24 @@ dependencies {
     // When using a MDC theme
     implementation 'com.google.android.material:compose-theme-adapter:1.2.1'
 
-    implementation 'org.jetbrains.anko:anko-commons:0.10.8'
-
     implementation('androidx.compose.material3:material3:1.2.0-alpha09')
     implementation('androidx.compose.material3:material3-window-size-class:1.2.0-alpha09')
 
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.8.1'
+
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.5.2'
+    implementation 'androidx.compose.material:material:1.5.4'
     // Animations
-    implementation 'androidx.compose.animation:animation:1.5.2'
+    implementation 'androidx.compose.animation:animation:1.5.4'
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.5.2'
+    implementation 'androidx.compose.ui:ui-tooling:1.5.4'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation('org.apache.commons:commons-text:1.10.0')
     // UI Tests
 
-    ////////////////////////////////////////////////////
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.core:core-ktx:1.12.0'
@@ -143,19 +153,19 @@ dependencies {
     implementation 'androidx.core:core-remoteviews:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
 
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.3'
-    implementation 'androidx.navigation:navigation-compose:2.7.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-compose:2.7.5'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.browser:browser:1.6.0'
+    implementation 'androidx.browser:browser:1.7.0'
 
     // For building appwidgets with Glance
     implementation 'androidx.glance:glance-appwidget:1.0.0'
@@ -166,6 +176,6 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.2'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.4'
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 }
