变更 1. 修复小组件周数显示异常 2. 改进课表页面教室查询 Sheet 的组件间关联方式，支持左右滑动切换教学楼 3. 语言支持缩减为仅支持：中文（简体）、英文 4. 改进网络异常处理流程及提示组件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,15 +13,15 @@ android {
         applicationId 'com.dart.campushelper'
         minSdk 26
         targetSdk 34
-        versionCode 15
-        versionName "1.1.3"
+        versionCode 16
+        versionName "1.1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
 
-        resourceConfigurations += ["zh-rCN", "zh-rTW", "en", "ja", "ko", "th", "id"]
+        resourceConfigurations += ["zh-rCN", "en"]
     }
 
     buildTypes {
