--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,6 +48,7 @@ jobs:
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-home-cache-cleanup: true
+      - run: chmod +x ./gradlew   
       - run: ./gradlew lintKotlin
 
   build:
