--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -80,7 +80,8 @@ jobs:
             echo ${{ secrets.SIGNING_KEY }} | base64 --decode > ${{ github.workspace }}/key.jks
           fi
       - name: Build with Gradle
-        run: ./gradlew -PappVerName=${{ env.VERSION }} app:assembleRelease
+      - run: chmod +x ./gradlew
+      - run: ./gradlew -PappVerName=${{ env.VERSION }} app:assembleRelease
       - name: Upload built Foss apk
         if: success() && github.event_name != 'pull_request' && github.repository == 'founchoo/GongYun-for-Android'
         uses: actions/upload-artifact@v3
