--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
-            shrinkResources false
+        debug {
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             bundle {
@@ -122,8 +122,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     // Saved state module for ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-    // Annotation processor
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    // Kapt processor
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     implementation 'org.jsoup:jsoup:1.16.1'
 
