Change `annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.7.0-alpha02'` to `kapt 'androidx.lifecycle:lifecycle-compiler:2.7.0-alpha02'` in build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ android {
     }
 
     buildTypes {
-        debug {
-            minifyEnabled true
-            shrinkResources true
+        release {
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             bundle {
