Specifies one flavor dimension in build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,19 +24,6 @@ android {
         resourceConfigurations += ["zh-rCN", "en"]
     }
 
-    productFlavors {
-        foss {
-            dimension "version"
-            applicationIdSuffix ".foss"
-            versionNameSuffix "-foss"
-        }
-        market {
-            dimension "version"
-            applicationIdSuffix ".market"
-            versionNameSuffix "-market"
-        }
-    }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -57,6 +44,21 @@ android {
             }
         }
     }
+
+    flavorDimensions += "version"
+    productFlavors {
+        foss {
+            dimension "version"
+            applicationIdSuffix ".foss"
+            versionNameSuffix "-foss"
+        }
+        market {
+            dimension "version"
+            applicationIdSuffix ".market"
+            versionNameSuffix "-market"
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
