--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,6 +14,13 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
+      - name: Increment version code and update version name
+        run: |
+          versionCode=$(grep versionCode app/build.gradle | awk '{ print $2 }')
+          versionCode=$((versionCode+1))
+          sed -i "s/versionCode .*/versionCode $versionCode/" app/build.gradle
+          versionName="$(date +%Y%m%d)-${GITHUB_SHA::7}"
+          sed -i "s/versionName .*/versionName \"$versionName\"/" app/build.gradle
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: current
@@ -26,9 +33,10 @@ jobs:
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
-      - run: mv ${{steps.sign_app.outputs.signedReleaseFile}} GongYun_$GITHUB_REF_NAME.apk
-      - uses: ncipollo/release-action@v1
+      - uses: GoogleCloudPlatform/release-please-action@v3
+        id: release
         with:
-          artifacts: "*.apk"
-          token: ${{ github.token }}
-          generateReleaseNotes: true
+          token: ${{ secrets.RELEASE_TOKEN }}
+          release-type: node
+          package-name: standard-version
+          changelog-types: '[{"type": "types", "section":"Types", "hidden": false},{"type": "revert", "section":"Reverts", "hidden": false},{"type": "feat", "section": "Features", "hidden": false},{"type": "fix", "section": "Bug Fixes", "hidden": false},{"type": "improvement", "section": "Feature Improvements", "hidden": false},{"type": "docs", "section":"Docs", "hidden": false},{"type": "style", "section":"Styling", "hidden": false},{"type": "refactor", "section":"Code Refactoring", "hidden": false},{"type": "perf", "section":"Performance Improvements", "hidden": false},{"type": "test", "section":"Tests", "hidden": false},{"type": "build", "section":"Build System", "hidden": false},{"type": "ci", "section":"CI", "hidden":false}]'
