--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -72,7 +72,10 @@ jobs:
           format: "YYYY_MM_DD HH_mm_ss_SSS"
       # Set version name
       - name: Retrieve version
-        run: echo VERSION=$(echo ${{ steps.dt.outputs.year }}-${{ steps.dt.outputs.month }}-${{ steps.dt.outputs.day }}-(${{ github.event.head_commit.id }} | head -c 10)) >> $GITHUB_ENV
+        run: |
+          COM_ID=${{ github.event.head_commit.id }} | head -c 10
+          echo "COM_ID=$COM_ID" >> $GITHUB_ENV
+          echo VERSION=$(echo ${{ steps.dt.outputs.year }}-${{ steps.dt.outputs.month }}-${{ steps.dt.outputs.day }}-${{ env.COM_ID }}) >> $GITHUB_ENV
       # Add version code
       - name: Bump version
         uses: Devofure/advance-android-version-actions@v1.4
