--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -70,11 +70,10 @@ jobs:
         uses: Kaven-Universe/github-action-current-date-time@v1
         with:
           format: "YYYY_MM_DD HH_mm_ss_SSS"
+      - run: echo COM_ID=$(echo ${{ github.event.head_commit.id }} | head -c 10) >> $GITHUB_ENV
       # Set version name
       - name: Retrieve version
-        run: |
-          echo COM_ID=$(echo ${{ github.event.head_commit.id }} | head -c 10) >> $GITHUB_ENV
-          echo VERSION=$(echo v${{ steps.dt.outputs.year }}.${{ steps.dt.outputs.month }}.${{ steps.dt.outputs.day }}.${{ env.COM_ID }}) >> $GITHUB_ENV
+        run: echo VERSION=$(echo v${{ steps.dt.outputs.year }}.${{ steps.dt.outputs.month }}.${{ steps.dt.outputs.day }}.${{ env.COM_ID }}) >> $GITHUB_ENV
       # Add version code
       - name: Bump version
         uses: Devofure/advance-android-version-actions@v1.4
